tests/baselines/reference/implementInterfaceAnyMemberWithVoid(strict=true).errors.txt
implementInterfaceAnyMemberWithVoid.ts(2,5): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.


==== implementInterfaceAnyMemberWithVoid.ts (1 errors) ====
    interface I {
        foo(value: number);
        ~~~~~~~~~~~~~~~~~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
    }
    
    class Bug implements I {
        public foo(value: number) {
        }
    }
    